<resources>
    <string name="app_name" translatable="false">LocateSBM</string>
    <string name="database_name" translatable="false">app_database</string>

    <string name="title_localization">Localization</string>
    <string name="title_building">Object</string>
    <string name="title_settings">Settings</string>

    <!-- Buttons -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="calibrate">Calibrate</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="add_building">Add room</string>
    <string name="scan_again">Scan again</string>
    <string name="more_symbols_dots">…</string>

    <!-- Fragments -->
    <string name="add_building_type_name">Enter object name</string>
    <string name="add_room_type_name">Enter room name</string>
    <string name="label_name">Name:</string>
    <string name="label_icon">Icon:</string>
    <string name="label_color">Color:</string>
    <string name="wifi_list_title">Nearby Wi-Fi networks</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="wifi_analysis">Wi-Fi Analysis</string>
    <string name="localization_title">Localization</string>
    <string name="show_wifi_list">Show Wi-Fi List</string>
    <string name="locate_now">Locate now</string>

    <!-- Settings -->
    <string name="not_set_text">Not set</string>
    <string name="not_selected">Not selected</string>
    <string name="settings_teco_api_integration">PLC Integration</string>
    <string name="settings_url_title">URL</string>
    <string name="settings_url_dialog_message">Enter the URL address for communication with PLC</string>
    <string name="settings_building_name_title">Building name in PLC</string>
    <string name="settings_building_name_dialog_message">Enter the building name in PLC</string>
    <string name="settings_request_auth_title">Request authorization</string>
    <string name="settings_request_auth_summary_enabled">Use basic authorization to communicate with PLC</string>
    <string name="settings_request_auth_summary_disabled">Do not use basic authorization to communicate with PLC</string>
    <string name="settings_request_auth_username_title">Username</string>
    <string name="settings_request_auth_username_dialog_message">Enter username for authorization</string>
    <string name="settings_request_auth_password_title">Password</string>
    <string name="settings_request_auth_password_dialog_message">Enter the password for authorization</string>
    <string name="settings_room_load_title">Reload rooms in the object</string>
    <string name="settings_room_load_dialog_title">Rooms reload</string>
    <string name="settings_room_load_dialog_message">Are you sure you want to load all the rooms from PLC? All existing rooms with data will be deleted.</string>
    <string name="settings_room_load_loaded_rooms_text">Loaded Rooms</string>
    <string name="settings_room_load_success_toast">Rooms added</string>
    <string name="settings_general">General</string>
    <string name="settings_localization_method">Localization method</string>
    <string name="settings_localization_method_random">Random (without localization)</string>
    <string name="settings_localization_method_knn">K-Nearest Neighbours (KNN)</string>
    <string name="settings_localization_method_wknn">Weighted K-Nearest Neighbours (WKNN) (Recommended)</string>
    <string name="settings_localization_method_cosine_wknn">Cosine Similarity (Cosine WKNN)</string>
    <string name="settings_change_color_title">Change building color</string>
    <string name="settings_about_app">About app</string>
    <string name="settings_app_info">App info</string>
    <string name="settings_app_info_text">LocateSBM is an application that allows users to connect to a building’s control system and manage various room attributes via their phone. The application also utilizes WiFi fingerprinting and phone sensors to determine the user’s location within the building. This helps estimate their position and simplifies control by always displaying the relevant room. \n\nThis application was created as part of a master’s thesis at the Technical University of Liberec, Faculty of Mechatronics, Informatics, and Interdisciplinary Studies (TUL FM).\n</string>
    <string name="settings_license_info">License Information</string>
    <string name="settings_license_info_text">App icon was downloaded from the public icon library Flaticon.\n\nAuthor: Cuputo\nAvailable at: www.flaticon.com</string>
    <string name="settings_choose_building">Choose object</string>
    <string name="settings_add_building">Add object</string>

    <!-- RequestHandler -->
    <string name="request_error_data_load">Error loading data: %s</string>
    <string name="request_error_network">Network error: %s</string>
    <string name="request_error_room_not_in_teco_api">Error: Room not found in PLC</string>
    <string name="request_error_invalid_url">Invalid URL address - %s</string>
    <string name="request_error_edited_room_not_in_teco_api">Error: Room that is going to be edited not found in PLC</string>
    <string name="request_error_reading_error_response">Error while reading error response</string>
    <string name="request_error_reading_error_response_message">Error while reading error response: %s</string>
    <string name="request_error_unknown">Error: Unknown error</string>

    <!-- Wi-Fi Analysis Fragment -->
    <string name="wifi_analysis_info_scan_off">Turn on scan to view nearby Wi-Fi APs</string>
    <string name="wifi_analysis_info_no_wifi">No nearby Wi-Fi networks found</string>

    <!-- Wi-Fi List Adapter -->
    <string name="no_ssid" translatable="false">[No-SSID]</string>
    <string name="wifi_rtt" translatable="false">Wi-Fi RTT</string>
    <string name="wifi_signal_with_unit" translatable="false">%d dBm</string>

    <!-- Dialogs -->
    <string name="dialog_title_add_building">Add new object</string>
    <string name="dialog_error_add_building">Error - you need to enter the object name and select a color!</string>
    <string name="dialog_title_delete_building">Delete object</string>
    <string name="dialog_message_delete_building">Are you sure you want to delete the object %s? All data will be deleted.</string>
    <string name="dialog_title_add_room">Add new room</string>
    <string name="dialog_error_add_room">Error - room name must be entered!</string>
    <string name="dialog_error_edit_room">Error - icon must be entered!</string>
    <string name="dialog_title_delete_room">Delete room</string>
    <string name="dialog_message_delete_room">Are you sure you want to delete room %s?</string>
    <string name="dialog_change_color_title">Change the color of building %s</string>
    <string name="dialog_wifi_scan_info_title">Wi-Fi Scanning Limitation</string>
    <string name="dialog_wifi_scan_info_message">Unfortunately, Android limits Wi-Fi scanning frequency to a maximum of 4 scans within 2 minutes, which significantly restricts the functionality of this application.\n\nTo enable unrestricted scanning, it is recommended to disable the Wi-Fi scan throttling option in Developer Settings. Otherwise, Wi-Fi scanning may often return outdated results.</string>
    <string name="dialog_wifi_scan_info_setup_process">Developer Options &gt; Networking &gt; Wi-Fi scan throttling &gt; Disable</string>
    <string name="dialog_wifi_scan_info_button_understand">I Understand</string>
    <string name="dialog_wifi_scan_info_button_open_settings">Go to Settings</string>

    <!-- Info texts -->
    <string name="info_please_choose_building">Please select an object in the settings</string>
    <string name="info_no_rooms_yet">No rooms yet</string>
    <string name="info_data_not_available">Data not available</string>
    <string name="info_plc_integration_not_set">PLC integration is not set up</string>
    <string name="info_loading">Loading…</string>
    <string name="info_data_not_loaded">Failed to load room data</string>
    <string name="info_data_not_loaded_with_error_message">Failed to load room data\n\n%s</string>
    <string name="info_room_has_no_attributes">The room does not contain any adjustable attributes.</string>

    <!-- Image descriptions -->
    <string name="image_building_selected">Object is selected</string>
    <string name="image_room_menu">Room menu</string>
    <string name="image_open_menu_choose_building">Open choose building menu</string>

    <!-- Room attributes -->
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="co2">CO2</string>
    <string name="set_temperature">Set temperature</string>
    <string name="valve">Valve</string>
    <string name="light1">Light 1</string>
    <string name="light2">Light 2</string>
    <string name="light3">Light 3</string>
    <string name="blinds">Blinds</string>
    <string name="ventilation">Ventilation</string>

    <!-- Calibration -->
    <string name="calibration_title">Room Localization Calibration</string>
    <string name="status_text_not_calibrated_yet">The room is not calibrated yet</string>
    <string name="status_text_calibrated_date">Last calibrated: %s</string>
    <string name="choose_size_text">Choose room size</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="calibration_info_text">A total of %d Wi-Fi scans will be performed in the room. Each scan captures a unique Wi-Fi fingerprint, helping the application determine your exact location within the building. Try to cover as much area as possible and perform the scans at different spots to achieve the highest accuracy.</string>
    <string name="start_scanning">Start scanning</string>
    <string name="room_scanning_title">Room scanning - point no. %d</string>
    <string name="button_get_wifi_fingerprint">Get Wi-Fi Fingerprint</string>

    <!-- Colors -->
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>

    <!-- Toast -->
    <string name="toast_localization_permission_not_granted">Location access is not allowed. Permission is required for WiFi scanning.</string>
    <string name="toast_scan_failed">Wi-Fi scan failed.</string>
    <string name="toast_countdown_timer_paused">Countdown to localization paused.</string>
    <string name="toast_countdown_timer_resumed">Countdown to localization resumed.</string>
    <string name="toast_room_calibrated">Room calibrated successfully</string>
    <string name="toast_add_room_error_duplicated_name">Cannot add room, name is already used in this building.</string>
    <string name="toast_edit_room_database_error">Unable to edit room - database error</string>

    <!-- Tooltips -->
    <string name="tooltip_localization_probability">Localization probability: %s</string>
    <string name="tooltip_room_not_calibrated">The room is not calibrated</string>

    <!-- Room setup -->
    <string name="confirm_set_toast">Set:\n%s %s%s</string>
    <string name="decimal_separator">.</string>
</resources>