<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_wifi_scan_info_title"
        android:text="@string/dialog_wifi_scan_info_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_wifi_scan_info_message"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_wifi_scan_info_message"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_wifi_scan_info_setup_process"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_wifi_scan_info_setup_process"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/wifi_scan_info_button_understand"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/dialog_wifi_scan_info_button_understand"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/wifi_scan_info_button_open_settings"
            android:text="@string/dialog_wifi_scan_info_button_open_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>