<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_localization">

    <fragment
        android:id="@+id/navigation_localization"
        android:name="com.korinek.indoorlocalizatorapp.ui.localization.LocalizationFragment"
        android:label="@string/title_localization"
        tools:layout="@layout/fragment_localization" />

    <fragment
        android:id="@+id/navigation_building"
        android:name="com.korinek.indoorlocalizatorapp.ui.building.BuildingFragment"
        android:label="@string/title_building"
        tools:layout="@layout/fragment_building" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.korinek.indoorlocalizatorapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>