<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_calibrate_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <include layout="@layout/bottom_sheet_top_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="start|center_vertical">

        <ImageView
            android:id="@+id/calibrate_room_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/calibrate_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/light_gray" />

    <ViewFlipper
        android:id="@+id/calibrate_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- First state - SIZE_CHOOSE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/text_calibration_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:layout_marginVertical="10dp"
                android:text="@string/calibration_title"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginVertical="20dp"
                android:text="@string/calibration_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/choose_size_text"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/button_group_room_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    app:singleSelection="true"
                    android:padding="8dp"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_option_small"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_small" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_option_medium"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_option_large"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size_large" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <LinearLayout
                    android:id="@+id/layout_starting_calibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible">
                    <TextView
                        android:id="@+id/calibration_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:lineSpacingExtra="4dp"
                        android:gravity="start"
                        android:layout_marginBottom="20dp"/>

                    <Button
                        style="@style/Widget.MaterialComponents.Button"
                        android:id="@+id/button_start_calibration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_scanning"
                        android:drawableLeft="@drawable/ic_calibrate"
                        android:drawablePadding="15dp"
                        android:drawableTint="@color/design_default_color_background"
                        android:layout_gravity="center"
                        android:paddingVertical="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Second state - ROOM_SCANNING -->
        <FrameLayout
            android:id="@+id/room_scanning_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </ViewFlipper>
</LinearLayout>