<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_measurements_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/room_scanning_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ViewFlipper
        android:id="@+id/measurements_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- First state - NOT_STARTED -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/get_fingerprint_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_calibrate"
                android:drawablePadding="5dp"
                android:drawableTint="@color/design_default_color_background"
                android:textSize="16sp"
                android:text="@string/button_get_wifi_fingerprint"/>
        </LinearLayout>

        <!-- Second state - LOADING -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <!-- Third state - DONE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wifi_fingerprints_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/repeat_scan_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/scan_again"/>
                <Button
                    android:id="@+id/save_fingerprint_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/save"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Fourth state - FAILED -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginVertical="30dp"
                android:text="@string/wifi_analysis_info_no_wifi"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/error_repeat_scan_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                android:text="@string/scan_again"/>
        </FrameLayout>
    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <com.funrisestudio.stepprogress.StepProgressView
            android:id="@+id/step_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:stepsCount="4"
            app:arcPadding="3dp"
            app:arcWidth="2dp"
            app:arcColor="?colorPrimary"
            app:nodeHeight="22dp"
            app:titlesEnabled="false"
            app:nodeColor="?colorPrimary"
            app:textNodeColor="?colorPrimary"
            app:textNodeSize="14sp"
            app:colorInactive="@color/light_gray" />
    </LinearLayout>

</LinearLayout>